--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="assets\images\certificates\crackedcertification.png">
-                <img src="assets\images\certificates\crackedcertification.png" alt="client logo">
+              <a href="assets\images\crackedcertification.png">
+                <img src="assets\images\crackedcertification.png" alt="client logo">
               </a>
             </li>
 
