--- a/index.html
+++ b/index.html
@@ -942,6 +942,26 @@ decision-making policies
 
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="data analysis">
+              <a href="https://abhidataanalysisandvisuals.streamlit.app/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="https://images.pexels.com/photos/265087/pexels-photo-265087.jpeg?auto=compress&cs=tinysrgb&w=600" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Data and Excel Analysis and visuals App</h3>
+
+                <p class="project-category">Data Analysis</p>
+
+              </a>
+            </li>
+
+
             <li class="project-item  active" data-filter-item data-category="data analysis">
               <!-- <a href="https://abhidataanalysiswebapp.streamlit.app/"> -->
 
