--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ decision-making policies
 
         </section>
 
-        <a href="https://drive.google.com/drive/u/0/folders/14Y4RDtqMyXAgLTfb9zmnQ1rkurS1CUee" style="display: flex; justify-content: center; align-items: center; text-decoration: none; width: 100%;margin-top: 30px;">
+        <a href="https://drive.google.com/file/d/1NoBHhwdD4w52uorr_YwqDk6aHV9Fti-3/view?usp=sharing" style="display: flex; justify-content: center; align-items: center; text-decoration: none; width: 100%;margin-top: 30px;">
           <button class="form-btn" type="submit"  style="margin: auto;">
               <ion-icon name="paper-plane"></ion-icon>
               <span>Open Resume</span>
